Fixed newer method with Collections.emptyList() call