@@ -8,6 +8,7 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Supplier;
@@ -291,7 +292,7 @@ class ReflectedMethodAndConstructorTest {
                 () -> ReflectionKit.query(ConstructorFixture.class)
                         .constructor()
                         .params(List.class)
-                        .newInstance(List.of())
+                        .newInstance(Collections.emptyList())
         );
 
         assertTrue(exception.getMessage().contains("Unable to resolve constructor"));
